--- a/html/index.html
+++ b/html/index.html
@@ -9,11 +9,11 @@
 
         <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,300' rel='stylesheet' type='text/css'>
         
-        <link rel="stylesheet" href="../css/animate.css">
-        <link rel="stylesheet" href="../css/icomoon.css">
-        <link rel="stylesheet" href="../css/bootstrap.css">
-        <link rel="stylesheet" href="../css/superfish.css">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="/bap/css/animate.css">
+        <link rel="stylesheet" href="/bap/css/icomoon.css">
+        <link rel="stylesheet" href="/bap/css/bootstrap.css">
+        <link rel="stylesheet" href="/bap/css/superfish.css">
+        <link rel="stylesheet" href="/bap/css/style.css">
         
         <script src="../js/modernizr-2.6.2.min.js"></script>
     </head>
@@ -186,13 +186,13 @@
         </div>
     </div>
 
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/jquery.easing.1.3.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/jquery.waypoints.min.js"></script>
-    <script src="../js/hoverIntent.js"></script>
-    <script src="../js/superfish.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="/bap/js/jquery.min.js"></script>
+    <script src="/bap/js/jquery.easing.1.3.js"></script>
+    <script src="/bap/js/bootstrap.min.js"></script>
+    <script src="/bap/js/jquery.waypoints.min.js"></script>
+    <script src="/bap/js/hoverIntent.js"></script>
+    <script src="/bap/js/superfish.js"></script>
+    <script src="/bap/js/main.js"></script>
     </body>
 </html>
 
