removed the includes in the memberlist

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,9 @@
         <link rel="stylesheet" href="/bap/css/superfish.css">
         <link rel="stylesheet" href="/bap/css/style.css">
         
-        <script src="../js/modernizr-2.6.2.min.js"></script>
+        <link rel="icon" href="/bap/assets/images/logo.png">
+        
+        <script src="/bap/js/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <div id="fh5co-wrapper">
